err/rtcdatatypeadaptor.err
Listing '.'...
Listing './RTCDataTypeAdaptor'...
Listing './RTCDataTypeAdaptor/bin'...
Compiling './RTCDataTypeAdaptor/bin/generate_adaptor.py'...
Listing './bin'...
Compiling './bin/generate_adaptor.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RTCDataTypeAdaptor'...
Compiling './lib/python3.5/site-packages/RTCDataTypeAdaptor/project_generator.py'...
***   File "./lib/python3.5/site-packages/RTCDataTypeAdaptor/project_generator.py", line 53
    if verbose: print 'Backend (%s) is not available' % language
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/RTCDataTypeAdaptor-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/idl_parser'...
Listing './lib/python3.5/site-packages/idl_parser-0.0.17.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
